@@ -759,6 +759,7 @@ const (
 	MetaTimeString           = "*time_string"
 	MetaIP2Hex               = "*ip2hex"
 	MetaString2Hex           = "*string2hex"
+	MetaUnixTime             = "*unixtime"
 	MetaSIPURIMethod         = "*sipuri_method"
 	MetaSIPURIHost           = "*sipuri_host"
 	MetaSIPURIUser           = "*sipuri_user"
